<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail">Detail Movie</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="date">Release Date</string>
    <string name="movie">Movie</string>
    <string name="tvShow">Tv Show</string>
    <string name="poster">Poster</string>
    <string name="background">Background</string>
    <string name="image_home">Image Home</string>

</resources>
